--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.title {
+  display: flex;
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  border-radius: 15px;
+}
+
 .wrapper {
   background: #fff;
   border-radius: 15px;
@@ -115,41 +126,41 @@ ul li:is(:hover, .active) {
   text-decoration: none;
 }
 
-.container {
-  width: 100%;
-  height: 100vh;
-}
+/*.container {*/
+/*  width: 100%;*/
+/*  height: 100vh;*/
+/*}*/
 
-#intro {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  color: white;
-  background: radial-gradient(circle, rgba(57,51,53,1) 0%, rgba(233,183,148,1) 100%);
-}
+/*#intro {*/
+/*  width: 100%;*/
+/*  height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  gap: 20px;*/
+/*  color: white;*/
+/*  background: radial-gradient(circle, rgba(57,51,53,1) 0%, rgba(233,183,148,1) 100%);*/
+/*}*/
 
-#intro i {
-  cursor: pointer;
-  font-size: 3rem;
-  margin-right: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
+/*#intro i {*/
+/*  cursor: pointer;*/
+/*  font-size: 3rem;*/
+/*  margin-right: 5px;*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*  text-align: center;*/
+/*}*/
 
-#intro h1 {
-  margin-bottom: 20px;
-  font-size: 70px;
-}
+/*#intro h1 {*/
+/*  margin-bottom: 20px;*/
+/*  font-size: 70px;*/
+/*}*/
 
-.bounce {
-  animation: bounce 2s infinite;
-}
+/*.bounce {*/
+/*  animation: bounce 2s infinite;*/
+/*}*/
 
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
@@ -163,7 +174,7 @@ ul li:is(:hover, .active) {
   }
 }
 
-.ayahpage {
+.ayah-page {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -171,7 +182,7 @@ ul li:is(:hover, .active) {
   min-height: 100vh;
   width: 100%;
   margin-bottom: 20px;
-  background: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);
+  background: radial-gradient(circle, #006730 0%, #00d4ff 100%);
 }
 
 /* Media Queries for Mobile Responsiveness */
@@ -199,11 +210,11 @@ ul li:is(:hover, .active) {
     margin-top: 10px;
   }
 
-  #intro h1 {
-    font-size: 50px;
-  }
+  /*#intro h1 {*/
+  /*  font-size: 50px;*/
+  /*}*/
 
-  #intro i {
-    font-size: 2rem;
-  }
+  /*#intro i {*/
+  /*  font-size: 2rem;*/
+  /*}*/
 }
