--- a/style.css
+++ b/style.css
@@ -6,10 +6,21 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.ayah-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  width: 100%;
+  margin-bottom: 20px;
+  background: radial-gradient(circle, #006730 0%, #00d4ff 100%);
+}
 
 .wrapper {
   background: #fff;
-  border-radius: 15px;
+  border-radius: 50px;
+  width: 50rem;
   padding: 30px 30px 25px;
   box-shadow: 0 12px 35px rgba(0,0,0,0.1);
 }
@@ -163,28 +174,18 @@ ul li:is(:hover, .active) {
 /*  animation: bounce 2s infinite;*/
 /*}*/
 
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-}
+/*@keyframes bounce {*/
+/*  0%, 20%, 50%, 80%, 100% {*/
+/*    transform: translateY(0);*/
+/*  }*/
+/*  40% {*/
+/*    transform: translateY(-30px);*/
+/*  }*/
+/*  60% {*/
+/*    transform: translateY(-15px);*/
+/*  }*/
+/*}*/
 
-.ayah-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;
-  width: 100%;
-  margin-bottom: 20px;
-  background: radial-gradient(circle, #006730 0%, #00d4ff 100%);
-}
 
 /* Media Queries for Mobile Responsiveness */
 @media (max-width: 768px) {
@@ -209,6 +210,14 @@ ul li:is(:hover, .active) {
   .buttons button {
     width: 100%;
     margin-top: 10px;
+  }
+
+  .wrapper {
+    border-radius: 20px;
+    width: 100%;
+    padding: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
   }
 
   /*#intro h1 {*/
